@@ -175,6 +175,8 @@ xbee_err xbee_convTx(struct xbee_con *con, unsigned char *retVal, const char *fo
 xbee_err xbee_connTx(struct xbee_con *con, unsigned char *retVal, const unsigned char *buf, int len);
 xbee_err xbee_conRx(struct xbee_con *con, struct xbee_pkt **retPkt, int *remainingPackets);
 /* - */
+xbee_err xbee_conPurge(struct xbee_con *con);
+/* - */
 xbee_err xbee_conSleepSet(struct xbee_con *con, enum xbee_conSleepStates state);
 xbee_err xbee_conSleepGet(struct xbee_con *con, enum xbee_conSleepStates *state);
 /* - */
