@@ -5,6 +5,7 @@ v3.0.5 - in progress
 	* Added xbee_vsetup()
 	* Added address validation
 	* Added man page documentation
+	* Added xbee_conPurge()
 
 v3.0.4 - 29 Feb 2012
 	* Implemented rx/tx counters
